error_log.txt
Traceback (most recent call last):
  File "/workspaces/control-entradas-salidas/usr/app_launcher.py", line 217, in main
    from usr.views.login_view import LoginView
  File "/workspaces/control-entradas-salidas/usr/views/__init__.py", line 5, in <module>
    from .historial_facturas_view import HistorialFacturasView
  File "/workspaces/control-entradas-salidas/usr/views/historial_facturas_view.py", line 589
    if self.factura_dlg is None:
    ^^
SyntaxError: expected 'except' or 'finally' block
